<resources>
    <string name="app_name">MadLevel4Task 2</string>

    <string name="action_history">History</string>
    <string name="action_clear_history">Clear history</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Game Fragment</string>
    <string name="second_fragment_label">History Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_welcome">Welcome</string>
    <string name="game_loss">Computer wins!</string>
    <string name="title_draw">Draw</string>
    <string name="game_win">You win!</string>
    <string name="title_instructions">Instructions: select rock, paper or scissors to play.</string>
    <string name="player_computer">Computer</string>
    <string name="player_you">You</string>
    <string name="game_versus">V.S.</string>
    <string name="title_statistics">Your all time statistics</string>
    <string name="title_statistics_numbers">Win: %d Draw: %d Lose: %d</string>
    <string name="rock">Rock</string>
    <string name="paper">Paper</string>
    <string name="scissor">Scissor</string>
</resources>